added netlify code

--- a/index.html
+++ b/index.html
@@ -45,7 +45,16 @@
 
         <div class="showcase-form card">
           <h2>Request a Demo</h2>
-          <form>
+          <form
+            name="contact"
+            method="POST"
+            netlify-honeypot="bot-field"
+            data-netlify="true"
+          >
+            <input type="hidden" name="form-name" value="contact" />
+            <p class="hidden">
+              <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
+            </p>
             <div class="form-control">
               <input type="text" name="name" placeholder="Name" required />
             </div>
@@ -171,16 +180,16 @@
           </ul>
         </nav>
         <div class="social">
-          <a href="https://github.com/Mason-GR"
+          <a href="https://github.com/Mason-GR" target="_blank"
             ><i class="fab fa-github fa-2x"></i
           ></a>
-          <a href="https://www.facebook.com"
+          <a href="https://www.facebook.com" target="_blank"
             ><i class="fab fa-facebook fa-2x"></i
           ></a>
-          <a href="https://www.instagram.com"
+          <a href="https://www.instagram.com" target="_blank"
             ><i class="fab fa-instagram fa-2x"></i
           ></a>
-          <a href="https://twitter.com/?lang=en"
+          <a href="https://twitter.com/?lang=en" target="_blank"
             ><i class="fab fa-twitter fa-2x"></i
           ></a>
         </div>
