--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/utilities.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Heroku | Clone</title>
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
   </head>
   <body>
     <!-- Navbar -->
@@ -53,7 +54,9 @@
           >
             <input type="hidden" name="form-name" value="contact" />
             <p class="hidden">
-              <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
+              <label
+                >Don’t fill this out if you’re human: <input name="bot-field"
+              /></label>
             </p>
             <div class="form-control">
               <input type="text" name="name" placeholder="Name" required />
