--- a/about.html
+++ b/about.html
@@ -34,8 +34,8 @@
     <section class="docs-head bg-primary py-3">
       <div class="container grid">
         <div>
-          <h1 class="xl">Documentation</h1>
-          <p class="lead">Learn how to work with the Masonry platform.</p>
+          <h1 class="xl">About Masonry</h1>
+          <p class="lead">What is Masonry?</p>
         </div>
         <img src="images/docs.png" alt="" />
       </div>
