more styling & adding to about page

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="css/utilities.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" type="image/jpg" href="images/favicon.png" />
     <title>Heroku | Clone</title>
   </head>
   <body>
@@ -37,7 +38,7 @@
           <h1 class="xl">About Masonry</h1>
           <p class="lead">What is Masonry?</p>
         </div>
-        <img src="images/docs.png" alt="" />
+        <i class="fas fa-question fa-10x"></i>
       </div>
     </section>
 
@@ -50,7 +51,7 @@
             <ul>
               <li><a class="text-primary" href="docs.html">Introduction</a></li>
               <li><a href="about.html">About Masonry</a></li>
-              <li><a href="#">Installation</a></li>
+              <li><a href="install.html">Installation</a></li>
             </ul>
           </nav>
           <h3 class="my-2">Deployments</h3>
