added custom images

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="css/utilities.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" type="image/jpg" href="images/favicon.png" />
+    <link rel="shortcut icon" type="image/jpg" href="images/favicon-2.png" />
     <title>Heroku | Clone</title>
   </head>
   <body>
@@ -109,7 +109,7 @@
     <!-- Cli -->
     <section class="cli">
       <div class="container grid">
-        <img src="images/cli.png" alt="" />
+        <img src="images/cli-2.png" alt="" />
         <div class="card">
           <h3>Easy to use, cross-platform CLI.</h3>
         </div>
