--- a/docs.html
+++ b/docs.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="css/utilities.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" type="image/jpg" href="images/favicon.png" />
+    <link rel="shortcut icon" type="image/jpg" href="images/favicon-2.png" />
     <title>Heroku | Clone</title>
   </head>
   <body>
